MDEV-13822 mariabackup incremental prepare incorrectly sets file size.

Fix incremental prepare to change file size while applying
delta file, if delta file contains page 0 with the new size.